--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Blogz</title>
+        <title>Enrollment Application</title>
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/styles.css">
     </head>
@@ -11,7 +11,8 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/browse">Browse Classes</a></li>
-                <li><a href="/login">Login</a></li>
+                <li><a href="/student">Student Portal</a></li>
+                <li><a href="/create">Instructor Portal</a></li>
             </ul>
         </nav>
         {% block content %}
