Added User Signup

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -7,7 +7,7 @@
 {% for course in courses %}
 
 <h2 class="name"><a href="/{{course.key().id()}}">{{course.name}}</a></h2>
-<p class="description">{{course.description}}</p>
+<p class="instructor">{{course.instructor}}</p>
 
 {% endfor %}
 
