--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -11,6 +11,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/browse">Browse Classes</a></li>
+                <li><a href="/signup">Create an Account</a></li>
                 <li><a href="/student">Student Portal</a></li>
                 <li><a href="/create">Instructor Portal</a></li>
             </ul>
